fix chip alignment (#64)

--- a/packages/neptune-css/src/less/chip.less
+++ b/packages/neptune-css/src/less/chip.less
@@ -5,8 +5,9 @@
   align-items: center;
   color: var(--brand-navy);
   background: var(--brand-smoke-plus-10);
+  line-break: 0;
   margin: var(--spacer) calc(var(--spacer) / 2) 0 0;
-  padding: 0 var(--spacer) 0 calc(var(--spacer) * 2);
+  padding: 1px var(--spacer) 0 calc(var(--spacer) * 2) 0;
   min-height: calc(var(--spacer) * 4);
   border-radius: 100px;
 
@@ -18,7 +19,7 @@
   .chip-remove {
     margin-left: calc(var(--spacer) * 2);
     height: calc(var(--spacer) * 2);
-    margin-top: -2px;
+    margin-top: -3px;
   }
 
   &.has-error {
